--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,36 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Max Eriksson at 2024-12-11 16:08:55 +0100 
+%% Created for Max Eriksson at 2024-12-16 15:11:46 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Outeiral:2021,
+	author = {Outeiral, Carlos and Strahm, Martin and Shi, Jiye and Morris, Garrett M. and Benjamin, Simon C. and Deane, Charlotte M.},
+	date = {2021/01/01},
+	date-added = {2024-12-16 15:11:39 +0100},
+	date-modified = {2024-12-16 15:11:44 +0100},
+	doi = {https://doi.org/10.1002/wcms.1481},
+	isbn = {1759-0876},
+	journal = {WIREs Computational Molecular Science},
+	journal1 = {WIREs Computational Molecular Science},
+	journal2 = {WIREs Computational Molecular Science},
+	journal3 = {WIREs Comput Mol Sci},
+	keywords = {ab initio simulations; machine learning; optimization; protein folding; quantum computing},
+	month = {2024/12/16},
+	n2 = {Abstract Quantum computers can in principle solve certain problems exponentially more quickly than their classical counterparts. We have not yet reached the advent of useful quantum computation, but when we do, it will affect nearly all scientific disciplines. In this review, we examine how current quantum algorithms could revolutionize computational biology and bioinformatics. There are potential benefits across the entire field, from the ability to process vast amounts of information and run machine learning algorithms far more efficiently, to algorithms for quantum simulation that are poised to improve computational calculations in drug discovery, to quantum algorithms for optimization that may advance fields from protein structure prediction to network analysis. However, these exciting prospects are susceptible to ?hype,? and it is also important to recognize the caveats and challenges in this new technology. Our aim is to introduce the promise and limitations of emerging quantum computing technologies in the areas of computational molecular biology and bioinformatics. This article is categorized under: Structure and Mechanism > Computational Biochemistry and Biophysics Data Science > Computer Algorithms and Programming Electronic Structure Theory > Ab Initio Electronic Structure Methods},
+	number = {1},
+	pages = {e1481},
+	publisher = {John Wiley \& Sons, Ltd},
+	title = {The prospects of quantum computing in computational molecular biology},
+	url = {https://doi.org/10.1002/wcms.1481},
+	volume = {11},
+	year = {2021},
+	year1 = {2021},
+	bdsk-url-1 = {https://doi.org/10.1002/wcms.1481}}
 
 @article{Bennett:1993,
 	author = {Bennett, Charles and Brassard, Gilles and Cr{\'e}peau, Claude and Jozsa, Richard and Peres, Asher and Wootters, William},
