Done with introduction?

--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -56,3 +56,5 @@ Quantum communications and quantum computing are two large fields being research
 Quantum communication opens up possibilities of transmitting data unable to be compromised using entangled states \cite{Hu:2023}. Furthermore, quantum computing could, if developed sufficiently, apply Shor's algorithm to break the current encryption used by modern digital technology \cite{Nielsen:2010}. It could therefore prove useful, or even paramount, to have a quantum internet complementing the current digital one \cite{Azuma:2023}.
 
 To realize a full scale quantum internet, or even larger quantum networks, technologies decreasing attenuation of the signal and storing information is essential \cite{Azuma:2023}. That is, a successful quantum communication protocol will need to apply both quantum memory technologies and quantum repeater technologies. It is therefore not sufficient to just focus on quantum computers for calculation but also infrastructure and technologies to link multiple quantum computers together. Specifically one application could be secure cloud based computing \cite{Azuma:2023} which could increase the accessibility to run quantum computation algorithms. Such algorithm's could solve some computational tasks exponentially faster thus decreasing energy needed, and thus effects on the climate. Quantum simulation algorithms can also help in the quest of understanding molecular reaction, helping to create more efficient catalysts \cite{Outeiral:2021}.
+
+A recent paper \cite{Acharya:2024} shows that quantum computers are scalable and are getting increasingly better regarding error-corrections and accuracy of measurements. This shows a great outlook for the field of quantum computers. The importance of being able to scale the network of quantum computers then becomes readily apparent.
