--- a/paper/introduction.tex
+++ b/paper/introduction.tex
@@ -1,4 +1,5 @@
 \section{Introduction}
+\begin{comment}
 \begin{mybox}{Bullet points}
     \begin{itemize}
         \item Quantum teleportation protocol
@@ -8,6 +9,7 @@
         \item EPR-pairs and bell basis
     \end{itemize}
 \end{mybox}
+\end{comment}
 \subsection{Preliminaries}
 In quantum teleportation the sender and receiver are referred to as Alice and Bob, and are denoted A and B respectively. Sometimes a third party is relevant which will be called Charlie and be denoted C. \cite{Nielsen:2010}
 
