--- a/references.bib
+++ b/references.bib
@@ -176,3 +176,31 @@
 	volume = {549},
 	year = {2017},
 	bdsk-url-1 = {https://doi.org/10.1038/nature23675}}
+
+@article{trapped_ion_memory,
+  title = {Multispecies Trapped-Ion Node for Quantum Networking},
+  author = {Inlek, I. V. and Crocker, C. and Lichtman, M. and Sosnova, K. and Monroe, C.},
+  journal = {Phys. Rev. Lett.},
+  volume = {118},
+  issue = {25},
+  pages = {250502},
+  numpages = {5},
+  year = {2017},
+  month = {Jun},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.118.250502},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.118.250502}
+}
+
+@article{dot_memory,
+author = {A. Greilich  and A. Shabaev  and D. R. Yakovlev  and Al. L. Efros  and I. A. Yugova  and D. Reuter  and A. D. Wieck  and M. Bayer },
+title = {Nuclei-Induced Frequency Focusing of Electron Spin Coherence},
+journal = {Science},
+volume = {317},
+number = {5846},
+pages = {1896-1899},
+year = {2007},
+doi = {10.1126/science.1146850},
+URL = {https://www.science.org/doi/abs/10.1126/science.1146850},
+eprint = {https://www.science.org/doi/pdf/10.1126/science.1146850},
+abstract = {The hyperfine interaction of an electron with the nuclei is considered as the primary obstacle to coherent control of the electron spin in semiconductor quantum dots. We show, however, that the nuclei in singly charged quantum dots act constructively by focusing the electron spin precession about a magnetic field into well-defined modes synchronized with a laser pulse protocol. In a dot with a synchronized electron, the light-stimulated fluctuations of the hyperfine nuclear field acting on the electron are suppressed. The information about electron spin precession is imprinted in the nuclei and thereby can be stored for tens of minutes in darkness. The frequency focusing drives an electron spin ensemble into dephasing-free subspaces with the potential to realize single frequency precession of the entire ensemble.}}
