--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -2,10 +2,10 @@
 Quantum internet \cite{Azuma:2023}
 \begin{mybox}{Bullet points}
     \begin{itemize}
-        \item quantum repeater analogues to normal repeater?
-        \item How to realize quantum memory 
-        \item why do we need quantum memory for quantum repeaters
-        \item how much does a quantum repeater reduce attenuation
+        %\item quantum repeater analogues to normal repeater?
+        %\item How to realize quantum memory 
+        %\item why do we need quantum memory for quantum repeaters
+        %\item how much does a quantum repeater reduce attenuation
         \item how good are today's quantum repeaters? 
     \end{itemize}
 \end{mybox}
@@ -15,21 +15,29 @@ Quantum internet \cite{Azuma:2023}
 Assuming that Alice and Bob are too far apart from each other to efficiently transport an entangled state between them,
 an option is entanglement swapping. Assume that Alice and Bob each share an entangled state with the third part, Charlie.
 These states would be $\ket{\phi}_{AC_1}$ and $\ket{\phi}_{BC_2}$. If Charlie now performs a simultaneus measurement on his two states, $C_1$ and $C_2$
-Alice and Bobs qubits will end up in an entangled state. This is a way of propagating entaglement through a third part to achieve more reliable longer distance entaglement.
+Alice and Bobs qubits will end up in an entangled state. This is a way of propagating entaglement through a third part to achieve more reliable longer distance entaglement \cite{Azuma:2023}.
 
-\subsection{Quantum memories (p.34)??}
+\subsection{Quantum memory}
+
+For the entaglement swapping to be efficiently used in a repeater protocol, 
+Charlie needs to store the quantum state sent by Alice, while waiting for Bobs state. This requires a way of storing the state without destroying the information it carries.
+Classically this is not a problem, since information can be duplicated exactly. In quantum information this is not possible due to the no-cloning theorem.
+A quantum state can not be completely duplicated, meaning that the qubit carrying the state must be stored itself.
+Such a memory has been realized in many different ways, including storing the state in trapped ions, with a memory time of 4 ms \cite{trapped_ion_memory} and in quantum dots with a memory time of 3 $\mu$s \cite{dot_memory}.
+
+
 \subsection{Quantum repeater protocol}
 %No cloning but instead entanglement swapping
 If long distance distribution of entanglement were to be achieved through optical fibers, one would experience an exponential loss of photons.
  To overcome this loss, quantum repeaters use heralded entanglement generation and entanglement swapping.
  Heralded entanglement generation involves establishing
  local Bell states between quantum memories and optical pulses at each party (e.g., Alice and a repeater node or two repeater nodes).
- The optical pulses are sent through fibers to a central station where a linear-optical Bell measurement is performed,
+ Thus there needs to be a quantum memory unit at each party. The optical pulses are sent through fibers to a central station where a linear-optical Bell measurement is performed,
  projecting the pulses into an entangled Bell state with success probability 
  \begin{equation}
     p_g(l) = e^{-l/L_{\text{att}}}/2,
  \end{equation}
- where $l$ is the fiber length and $L_{\text{att}}$ is the attenuation length. \textbf{Något om hur $L_{att}$ är definierat}
+ where $l$ is the fiber length and $L_{\text{att}}$ is the attenuation length, defined as the distance over which the transmittance of the fiber has dropped to $1/e$ of its initial value \cite{Azuma:2023}.% \textbf{Något om hur $L_{att}$ är definierat}
  Once neighboring parties share entanglement with a repeater node, entanglement swapping extends the entanglement between more distant parties.
  This is achieved via a Bell measurement on the quantum memories at the repeater node, succeeding with probability $p_s = 1/2$ in the ideal case.
  Without repeaters, directly linking Alice and Bob requires an average number of trials 
@@ -46,13 +54,13 @@ If long distance distribution of entanglement were to be achieved through optica
  \begin{equation}
     \langle T^{(1)}_{\text{tot}} \rangle \sim p_s^{-1} p_g(L/2)^{-1} = 2^2 e^{L/(2L_{\text{att}})}
  \end{equation}
- trials, providing a square-root improvement compared to the direct link.
+ trials, providing a square-root improvement compared to the direct link \cite{Azuma:2023}.
  This process generalizes with $N_{\text{QR}} = 2^n - 1$ equally spaced repeater nodes, where each step reduces the entanglement distance to $L/(N_{\text{QR}} + 1)$,
  achieving a total trial count of
  \begin{equation}
     \langle T^{(N_{\text{QR}})}_{\text{tot}} \rangle \sim 2^{1+\log_2(N_{\text{QR}} + 1)} e^{L/((N_{\text{QR}} + 1)L_{\text{att}})},
  \end{equation}
- exponentially improving efficiency. While this idealized protocol assumes perfect operations and quantum memories, practical implementations must account for memory errors,
+ exponentially improving efficiency \cite{Azuma:2023}. While this idealized protocol assumes perfect operations and quantum memories, practical implementations must account for memory errors,
  imperfect operations, and accumulated errors, mitigated by advanced error-suppression techniques. Thus,
  quantum repeaters enable scalable quantum communication by mitigating photon loss and other imperfections over long distances.
 
