--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -8,15 +8,15 @@ Experimental evidence for quantum teleportation in quantum communications.
 \end{mybox}
 \subsection{Satellite Based}
 
-1400 km \cite{Ren:2017}
-\begin{mybox}{Bullet points}
-    \begin{itemize}
-        \item Protocol used
-        \item distance
-        \item technical difficulties and innovations
-        \item what does this mean for quantum communications?
-    \end{itemize}
-\end{mybox}
+%1400 km \cite{Ren:2017}
+%\begin{mybox}{Bullet points}
+%    \begin{itemize}
+%        \item Protocol used
+%        \item distance
+%        \item technical difficulties and innovations
+%        \item what does this mean for quantum communications?
+%    \end{itemize}
+%\end{mybox}
 
 The qubit system used in this experiment was based on the polarization of a photon, represented as:  
 \begin{equation}
