--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -1,14 +1,14 @@
 \section{Quantum Repeaters and Quantum Memory}
-Quantum internet \cite{Azuma:2023}
-\begin{mybox}{Bullet points}
-    \begin{itemize}
-        %\item quantum repeater analogues to normal repeater?
-        %\item How to realize quantum memory 
-        %\item why do we need quantum memory for quantum repeaters
-        %\item how much does a quantum repeater reduce attenuation
-        \item how good are today's quantum repeaters? 
-    \end{itemize}
-\end{mybox}
+%Quantum internet \cite{Azuma:2023}
+%\begin{mybox}{Bullet points}
+%    \begin{itemize}
+%        \item quantum repeater analogues to normal repeater?
+%        \item How to realize quantum memory 
+%        \item why do we need quantum memory for quantum repeaters
+%        \item how much does a quantum repeater reduce attenuation
+%        \item how good are today's quantum repeaters? 
+%    \end{itemize}
+%\end{mybox}
 
 \subsection{Entanglement swapping}
 
@@ -65,4 +65,4 @@ If long distance distribution of entanglement were to be achieved through optica
  quantum repeaters enable scalable quantum communication by mitigating photon loss and other imperfections over long distances.
 
 
-\subsection{Experimental realizations???}
+%\subsection{Experimental realizations???}
