--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -1,11 +1,14 @@
 \section{Teleportation of Complex Quantum Systems}
 \begin{mybox}{Bullet points}
     \begin{itemize}
-        \item What is a complex system?
+        %\item What is a complex system?
         \item How does the protocol differ from simple systems?
-        \item Why is it important to be able to teleport complex quantum systems?
+        %\item Why is it important to be able to teleport complex quantum systems?
         \item Theoretical and experimental limits
     \end{itemize}
 \end{mybox}
 
 \subsection{Complex Quantum Systems}
+A complex quantum system is a system of particles where each particle has multiple degrees of freedom, in turn, one degree of freedom can have quantum numbers other than the basic $\ket{1}$ and $\ket{0}$. That is, to make quantum teleportation a practical technique for quantum communication it needs to be possible to teleport these high dimensional states, since we want to be able to teleport a complete quantum state for a given particle. For example, a photon can be encoded in polarization, orbital angular momentum, and more. This also increases the information density of the particles used to transmit information. \cite{Hu:2023}
+
+In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits, which are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been showed that auxiliary particles are needed to perform Bell measurements on high dimensional systems. \cite{Hu:2023}
