Finished with protocol + started with experiments

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Max Eriksson at 2024-12-16 15:19:21 +0100 
+%% Created for Max Eriksson at 2024-12-18 18:25:51 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Luo:2019,
+	author = {Luo, Yi-Han and Zhong, Han-Sen and Erhard, Manuel and Wang, Xi-Lin and Peng, Li-Chao and Krenn, Mario and Jiang, Xiao and Li, Li and Liu, Nai-Le and Lu, Chao-Yang and Zeilinger, Anton and Pan, Jian-Wei},
+	date = {2019/08/15/},
+	date-added = {2024-12-18 18:25:06 +0100},
+	date-modified = {2024-12-18 18:25:14 +0100},
+	day = {15},
+	doi = {10.1103/PhysRevLett.123.070505},
+	id = {10.1103/PhysRevLett.123.070505},
+	j1 = {PRL},
+	journal = {Physical Review Letters},
+	journal1 = {Phys. Rev. Lett.},
+	month = {08},
+	number = {7},
+	pages = {070505--},
+	publisher = {American Physical Society},
+	title = {Quantum Teleportation in High Dimensions},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.123.070505},
+	volume = {123},
+	year = {2019},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.123.070505},
+	bdsk-url-2 = {https://doi.org/10.1103/PhysRevLett.123.070505}}
 
 @article{Acharya:2024,
 	abstract = {Quantum error correction {$[$}1, 2, 3, 4{$]$} provides a path to reach practical quantum computing by combining multiple physical qubits into a logical qubit, where the logical error rate is suppressed exponentially as more qubits are added. However, this exponential suppression only occurs if the physical error rate is below a critical threshold. Here, we present two below-threshold surface code memories on our newest generation of superconducting processors, Willow: a distance-7 code, and a distance-5 code integrated with a real-time decoder. The logical error rate of our larger quantum memory is suppressed by a factor of {\$}{\$}{$\backslash$}varLambda {$\backslash$}mathrm{\{}=2.14{\}}{$\backslash$}pm 0.02{\$}{\$}when increasing the code distance by two, culminating in a 101-qubit distance-7 code with 0.143{\%} $\pm$0.003{\%} error per cycle of error correction. This logical memory is also beyond break-even, exceeding its best physical qubit's lifetime by a factor of {\$}{\$}2.4{$\backslash$}pm 0.3{\$}{\$}. Our system maintains below-threshold performance when decoding in real time, achieving an average decoder latency of 63 μs at distance-5 up to a million cycles, with a cycle time of 1.1 μs. We also run repetition codes up to distance-29 and find that logical performance is limited by rare correlated error events occurring approximately once every hour, or {\$}{\$}3{\$}{\$}{\$}{\$}{$\backslash$}times {\$}{\$}{\$}{\$}{\{}10{\}}\^{}{\{}9{\}}{\$}{\$}cycles. Our results present device performance that, if scaled, could realize the operational requirements of large scale fault-tolerant quantum algorithms.},
@@ -178,29 +200,32 @@
 	bdsk-url-1 = {https://doi.org/10.1038/nature23675}}
 
 @article{trapped_ion_memory,
-  title = {Multispecies Trapped-Ion Node for Quantum Networking},
-  author = {Inlek, I. V. and Crocker, C. and Lichtman, M. and Sosnova, K. and Monroe, C.},
-  journal = {Phys. Rev. Lett.},
-  volume = {118},
-  issue = {25},
-  pages = {250502},
-  numpages = {5},
-  year = {2017},
-  month = {Jun},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevLett.118.250502},
-  url = {https://link.aps.org/doi/10.1103/PhysRevLett.118.250502}
-}
+	author = {Inlek, I. V. and Crocker, C. and Lichtman, M. and Sosnova, K. and Monroe, C.},
+	doi = {10.1103/PhysRevLett.118.250502},
+	issue = {25},
+	journal = {Phys. Rev. Lett.},
+	month = {Jun},
+	numpages = {5},
+	pages = {250502},
+	publisher = {American Physical Society},
+	title = {Multispecies Trapped-Ion Node for Quantum Networking},
+	url = {https://link.aps.org/doi/10.1103/PhysRevLett.118.250502},
+	volume = {118},
+	year = {2017},
+	bdsk-url-1 = {https://link.aps.org/doi/10.1103/PhysRevLett.118.250502},
+	bdsk-url-2 = {https://doi.org/10.1103/PhysRevLett.118.250502}}
 
 @article{dot_memory,
-author = {A. Greilich  and A. Shabaev  and D. R. Yakovlev  and Al. L. Efros  and I. A. Yugova  and D. Reuter  and A. D. Wieck  and M. Bayer },
-title = {Nuclei-Induced Frequency Focusing of Electron Spin Coherence},
-journal = {Science},
-volume = {317},
-number = {5846},
-pages = {1896-1899},
-year = {2007},
-doi = {10.1126/science.1146850},
-URL = {https://www.science.org/doi/abs/10.1126/science.1146850},
-eprint = {https://www.science.org/doi/pdf/10.1126/science.1146850},
-abstract = {The hyperfine interaction of an electron with the nuclei is considered as the primary obstacle to coherent control of the electron spin in semiconductor quantum dots. We show, however, that the nuclei in singly charged quantum dots act constructively by focusing the electron spin precession about a magnetic field into well-defined modes synchronized with a laser pulse protocol. In a dot with a synchronized electron, the light-stimulated fluctuations of the hyperfine nuclear field acting on the electron are suppressed. The information about electron spin precession is imprinted in the nuclei and thereby can be stored for tens of minutes in darkness. The frequency focusing drives an electron spin ensemble into dephasing-free subspaces with the potential to realize single frequency precession of the entire ensemble.}}
+	abstract = {The hyperfine interaction of an electron with the nuclei is considered as the primary obstacle to coherent control of the electron spin in semiconductor quantum dots. We show, however, that the nuclei in singly charged quantum dots act constructively by focusing the electron spin precession about a magnetic field into well-defined modes synchronized with a laser pulse protocol. In a dot with a synchronized electron, the light-stimulated fluctuations of the hyperfine nuclear field acting on the electron are suppressed. The information about electron spin precession is imprinted in the nuclei and thereby can be stored for tens of minutes in darkness. The frequency focusing drives an electron spin ensemble into dephasing-free subspaces with the potential to realize single frequency precession of the entire ensemble.},
+	author = {A. Greilich and A. Shabaev and D. R. Yakovlev and Al. L. Efros and I. A. Yugova and D. Reuter and A. D. Wieck and M. Bayer},
+	doi = {10.1126/science.1146850},
+	eprint = {https://www.science.org/doi/pdf/10.1126/science.1146850},
+	journal = {Science},
+	number = {5846},
+	pages = {1896-1899},
+	title = {Nuclei-Induced Frequency Focusing of Electron Spin Coherence},
+	url = {https://www.science.org/doi/abs/10.1126/science.1146850},
+	volume = {317},
+	year = {2007},
+	bdsk-url-1 = {https://www.science.org/doi/abs/10.1126/science.1146850},
+	bdsk-url-2 = {https://doi.org/10.1126/science.1146850}}
