--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -2,7 +2,7 @@
 \begin{mybox}{Bullet points}
     \begin{itemize}
         %\item What is a complex system?
-        \item How does the protocol differ from simple systems?
+        %\item How does the protocol differ from simple systems?
         %\item Why is it important to be able to teleport complex quantum systems?
         \item Theoretical and experimental limits
     \end{itemize}
@@ -11,4 +11,16 @@
 \subsection{Complex Quantum Systems}
 A complex quantum system is a system of particles where each particle has multiple degrees of freedom, in turn, one degree of freedom can have quantum numbers other than the basic $\ket{1}$ and $\ket{0}$. That is, to make quantum teleportation a practical technique for quantum communication it needs to be possible to teleport these high dimensional states, since we want to be able to teleport a complete quantum state for a given particle. For example, a photon can be encoded in polarization, orbital angular momentum, and more. This also increases the information density of the particles used to transmit information. \cite{Hu:2023}
 
-In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits, which are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been showed that auxiliary particles are needed to perform Bell measurements on high dimensional systems. \cite{Hu:2023}
+In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits, which are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been theoretically proven that auxiliary particles are needed to perform Bell measurements when using linear optics. \cite{Hu:2023}
+
+\subsection{High-Dimensional Teleportation Protocol}
+For a 3-dimensional systems suppose Alice wants to teleport the normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi + \gamma \ket{2}_\phi$ consisting of a single photon. As with simple systems, Alice and Bob need to share an entanglement source, for example 
+\begin{equation}
+    \ket{\Psi}_{AB} = \frac{\ket{00}_{AB} + \ket{11}_{AB} + \ket{22}_{AB}}{\sqrt{3}}
+\end{equation}
+which is a 3-dimensional Bell state. The nine total 3-dimensional Bell states together create a basis of the Hilbert space. Then the entire system will be $\ket{\phi}\ket{\Psi}_{AB}$ and doing a similar, but more complicated, rewriting of the expression one can get to a point where there is equal probability to project the state into one of nine states when Alice performs her Bell measurement. Then, Alice classically transmits the result and Bob perform the necessary rotations to obtain $\ket{\phi}$. This can be extended to $d$-dimensions with $d^2$ Bell states in the basis. \cite{Luo:2019}
+
+\subsection{Experimental Realization}
+One experimentally proven Bell measurement scheme uses quantum Fourier transformations. The experiment teleported a 3-dimensional system using one auxiliary particle. However, it has been shown that for dimension $d$, $d-2$ auxiliary particles are needed. The fidelity of this experiment was $\SI{75\pm 1}{\percent}$. \cite{Luo:2019}
+
+More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done due to the limits of linear optics. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports.
