Need to write more about experiments but my brain is tired and doesn't work :(

--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -23,4 +23,4 @@ which is a 3-dimensional Bell state. The nine total 3-dimensional Bell states to
 \subsection{Experimental Realization}
 One experimentally proven Bell measurement scheme uses quantum Fourier transformations. The experiment teleported a 3-dimensional system using one auxiliary particle. However, it has been shown that for dimension $d$, $d-2$ auxiliary particles are needed. The fidelity of this experiment was $\SI{75\pm 1}{\percent}$. \cite{Luo:2019}
 
-More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done due to the limits of linear optics. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports.
+More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done due to the limits of linear optics. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports. This gives 9 different output positions for detectors, since one photon has 3-dimensional encoding, and depending on the state will end up in different places. Then, depending on the detector activation pattern, the state will be projected onto one of the possible Bell states. \cite{Luo:2019}
