--- a/paper/experiments.tex
+++ b/paper/experiments.tex
@@ -1,12 +1,16 @@
 \section{Experimental Evidence}
-Quantum teleportation has been realized across various experimental setups, each demonstrating unique protocols,
-achievements in distance, and innovations addressing technical challenges. 
-\begin{mybox}{Bullet points}
-    \begin{itemize}
-        \item Quantum teleportation has experimental evidence
-        \item Experimental hurdles
-    \end{itemize}
-\end{mybox}
+Quantum teleportation has been implemented in many experiments, 
+each with different protocols to address challenges in fidelity, distance, and scalability. 
+Experimental realization is necessary for validating theoretical models and advancing quantum communication technologies. 
+This section examines two key implementations, satellite-based and fiber network-based teleportation, that demonstrate 
+solutions to distance-dependent losses and environmental decoherence, contributing to the development of robust quantum networks.
+
+%\begin{mybox}{Bullet points}
+%    \begin{itemize}
+%        \item Quantum teleportation has experimental evidence
+%        \item Experimental hurdles
+%    \end{itemize}
+%\end{mybox}
 \subsection{Satellite Based}
 
 %1400 km \cite{Ren:2017}
