--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -21,6 +21,6 @@ For a 3-dimensional systems suppose Alice wants to teleport the normalized state
 which is a 3-dimensional Bell state. The nine total 3-dimensional Bell states together create a basis of the Hilbert space. Then the entire system will be $\ket{\phi}\ket{\Psi}_{AB}$ and doing a similar, but more complicated, rewriting of the expression one can get to a point where there is equal probability to project the state into one of nine states when Alice performs her Bell measurement. Then, Alice classically transmits the result and Bob perform the necessary rotations to obtain $\ket{\phi}$. This can be extended to $d$-dimensions with $d^2$ Bell states in the basis. \cite{Luo:2019}
 
 \subsection{Experimental Realization}
-One experimentally proven Bell measurement scheme uses quantum Fourier transformations. The experiment teleported a 3-dimensional system using one auxiliary particle. However, it has been shown that for dimension $d$, $d-2$ auxiliary particles are needed. The fidelity of this experiment was $\SI{75\pm 1}{\percent}$. \cite{Luo:2019}
+One experimentally proven Bell measurement scheme uses quantum Fourier transformations. The experiment teleported a 3-dimensional system using one auxiliary particle. However, it has been shown that for dimension $d$, $d-2$ auxiliary particles are needed. The fidelity of this experiment was $\SI{75\pm 1}{\percent}$. The system was encoded using path the path of the photon. That is, by using a series of mirrors and beam splitters, it is possible to generate superposition states. \cite{Luo:2019}
 
-More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done due to the limits of linear optics. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports. This gives 9 different output positions for detectors, since one photon has 3-dimensional encoding, and depending on the state will end up in different places. Then, depending on the detector activation pattern, the state will be projected onto one of the possible Bell states. \cite{Luo:2019}
+More specifically, one auxiliary photon was used to extend the Hilbert space to 4 dimensions. This was done due to the limits of linear optics concerning discrimination of Bell states for dimensions $d \geq 3$. The quantum Fourier transform was realized using a multiport beam splitter with 3-input-3-output all-to-all connected ports. This gives 9 different output positions for detectors, since one photon has 3-dimensional encoding, and depending on the state will end up in different places. Then, depending on the detector activation pattern, the state will be projected onto one of the possible Bell states. \cite{Luo:2019}
