--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -11,7 +11,7 @@
 \subsection{Complex Quantum Systems}
 A complex quantum system is a system of particles where each particle has multiple degrees of freedom, in turn, one degree of freedom can have quantum numbers other than the basic $\ket{1}$ and $\ket{0}$. That is, to make quantum teleportation a practical technique for quantum communication it needs to be possible to teleport these high dimensional states, since we want to be able to teleport a complete quantum state for a given particle. For example, a photon can be encoded in polarization, orbital angular momentum, and more. This also increases the information density of the particles used to transmit information. \cite{Hu:2023}
 
-In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits, which are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been theoretically proven that auxiliary particles are needed to perform Bell measurements when using linear optics. \cite{Hu:2023}
+In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits. Qudits are encoded in $d$ dimensions, and systems with $d\geq 3$ are referred to as multilevel systems, that is, qudits are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been theoretically proven that auxiliary particles are needed to perform Bell measurements when using linear optics. \cite{Hu:2023}
 
 \subsection{High-Dimensional Teleportation Protocol}
 For a 3-dimensional systems suppose Alice wants to teleport the normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi + \gamma \ket{2}_\phi$ consisting of a single photon. As with simple systems, Alice and Bob need to share an entanglement source, for example 
