--- a/paper/complex.tex
+++ b/paper/complex.tex
@@ -14,7 +14,7 @@ A complex quantum system is a system of particles where each particle has multip
 In contrast to the two-level encoding qubits used in teleportation of simple quantum systems, complex quantum system instead use qudits. Qudits are encoded in $d$ dimensions, and systems with $d\geq 3$ are referred to as multilevel systems, that is, qudits are multilevel encoded. There are numerous advantages of qudits in many areas of quantum information, including quantum communication and quantum computation. There are also some challenges implementing teleportation for high dimensional systems. Notably these challenges include preparing entanglement with sufficient quality to perform teleportation and performing Bell measurements. It has also been theoretically proven that auxiliary particles are needed to perform Bell measurements when using linear optics. \cite{Hu:2023}
 
 \subsection{High-Dimensional Teleportation Protocol}
-For a 3-dimensional systems suppose Alice wants to teleport the normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi + \gamma \ket{2}_\phi$ consisting of a single photon. As with simple systems, Alice and Bob need to share an entanglement source, for example 
+For a 3-dimensional system, suppose Alice wants to teleport the normalized state $\ket{\phi} = \alpha \ket{0}_\phi + \beta \ket{1}_\phi + \gamma \ket{2}_\phi$ consisting of a single photon. As with simple systems, Alice and Bob need to share an entanglement source, for example 
 \begin{equation}
     \ket{\Psi}_{AB} = \frac{\ket{00}_{AB} + \ket{11}_{AB} + \ket{22}_{AB}}{\sqrt{3}}
 \end{equation}
