--- a/paper/repeaters.tex
+++ b/paper/repeaters.tex
@@ -14,12 +14,12 @@
 
 Assuming that Alice and Bob are too far apart from each other to efficiently transport an entangled state between them,
 an option is entanglement swapping. Assume that Alice and Bob each share an entangled state with the third part, Charlie.
-These states would be $\ket{\phi}_{AC_1}$ and $\ket{\phi}_{BC_2}$. If Charlie now performs a simultaneus measurement on his two states, $C_1$ and $C_2$
-Alice and Bobs qubits will end up in an entangled state. This is a way of propagating entaglement through a third part to achieve more reliable longer distance entaglement \cite{Azuma:2023}.
+These states would be $\ket{\phi}_{AC_1}$ and $\ket{\phi}_{BC_2}$. If Charlie now performs a simultaneous measurement on his two states, $C_1$ and $C_2$,
+Alice and Bobs qubits will end up in an entangled state. This is a way of propagating entanglement through a third part in order to achieve more reliable long distance entanglement \cite{Azuma:2023}.
 
 \subsection{Quantum memory}
 
-For the entaglement swapping to be efficiently used in a repeater protocol, 
+For the entanglement swapping to be efficiently used in a repeater protocol, 
 Charlie needs to store the quantum state sent by Alice, while waiting for Bobs state. This requires a way of storing the state without destroying the information it carries.
 Classically this is not a problem, since information can be duplicated exactly. In quantum information this is not possible due to the no-cloning theorem.
 A quantum state can not be completely duplicated, meaning that the qubit carrying the state must be stored itself.
